# solana-program-examples

./: Cargo.toml
basics/account-data/native/program/src/: lib.rs  processor.rs
basics/account-data/native/program/src/state/: address_info.rs
basics/pda-rent-payer/anchor/programs/anchor-program-example/src/: lib.rs
basics/pda-rent-payer/anchor/tests/: bankrun.test.ts  test.ts
basics/processing-instructions/anchor/: Anchor.toml
basics/processing-instructions/anchor/programs/processing-instructions/src/: lib.rs
basics/processing-instructions/anchor/tests/: bankrun.test.ts
basics/processing-instructions/native/: package.json  pnpm-lock.yaml
out-of-workspase/tokens/nft-minter/native/: Cargo.toml  cicd.sh  package.json  pnpm-lock.yaml
out-of-workspase/tokens/nft-minter/native/src/instructions/: create.rs  mint.rs
out-of-workspase/tokens/nft-minter/native/tests/: instructions.ts  test.ts
